# amim-test-suite

./: environment.yml  pyproject.toml  show_plots.py
testsuite/: custom_wrapper.py  network_generators.py  utils.py
